Multilayer project progress

--- a/multi_layer_web_api/my.data/project.json
+++ b/multi_layer_web_api/my.data/project.json
@@ -1,9 +1,12 @@
 {
   "version": "1.0.0-*",
   "buildOptions": {
-    "emitEntryPoint": true
+    "emitEntryPoint": true,
+    "copyToOutput": {
+      "include": "**/*.db"
+    }
   },
-
+  
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
